# rea

./: .gitattributes  .gitignore  CLAUDE.md  LICENSE  MANIFEST.in  PYPI.md  README.md  pyproject.toml
.claude/: settings.json
.claude/agents/: code-reviewer.md  implementer.md  plan-reviewer.md  plan-validator.md  spec-reviewer.md
.claude/commands/: rea-brainstorm.md  rea-commit.md  rea-execute.md  rea-init.md  rea-plan.md  rea-update.md  rea-verify.md  rea-worktree.md  rea-wrap.md  rea-write-skill.md
.claude/hooks/: post-tool-use.sh
.github/workflows/: ci.yml  claude-review.yml
.rea/: lessons.md
.rea/log/: 2026-03-18-0604-session-pypi-publish.md  2026-03-28-1500-session-rationalization-tables-decision-log.md  2026-03-28-2145-session-pulse-launch.md  2026-03-30-0225-session-workflow-hardening-release.md
.rea/plans/0001-superpowers-parity/: plan.md  spec.md  todo.md
.rea/plans/0002-composable-agents/: plan.md  spec.md  todo.md
.rea/plans/0003-workflow-hardening/: plan.md  spec.md  todo.md
.rea/plans/0004-wrap-semantic-lessons/: plan.md  spec.md  todo.md
docs/: flowchart.md  plan.md  rea-planning-notes.md
docs/harness-research/: autonomous-harnesses.md  context-management-patterns.md  dag-harness-architectures.md  harness-video.md  march-of-nines-reliability.md  stripe-minions.md  validation-loop-patterns.md
docs/projects/cloud-ide/: north-star.md
docs/researches/: ai-coding-principles.md  openchamber-vs-opencode-manager.md  opencode-ecosystem.md  opencode-wrapper-comparison.md  opencode-wrapper-inventory.md  video-text.md  youtube-video.md
features/superpowers-parity/: CLAUDE.md
rea/: __init__.py  cli.py
rea/templates/.claude/: skill-writer-patterns.md
rea/templates/.claude/agents/: code-reviewer.md  debugger.md  explorer.md  implementer.md  plan-reviewer.md  rea-router.md  skill-writer.md
rea/templates/.claude/commands/: rea-commit.md  rea-execute.md  rea-init.md  rea-plan.md  rea-verify.md  rea-wrap.md
rea/templates/.github/workflows/: ci.yml  claude-review.yml
tests/: test_cli.py
