[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rea"
version = "0.3.0"
description = "Personal development toolkit — bootstraps Claude Code workflow into any project"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "ruff>=0.4",
]

[project.scripts]
rea = "rea.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["rea*"]

[tool.setuptools.package-data]
"rea" = ["templates/**/*", "templates/**/.claude/**/*", "templates/**/.claude/agents/*", "templates/**/.github/**/*"]
