[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rea-dev"
version = "0.6.0"
description = "Development toolkit — bootstraps structured Claude Code workflow (commands, agents, plans, CI) into any project"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "readev", email = "readevb@gmail.com" },
]
keywords = ["claude", "claude-code", "ai", "development", "toolkit", "agents", "workflow"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]
dependencies = [
    "typer>=0.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "ruff>=0.4",
]

[project.urls]
Homepage = "https://github.com/readevb/rea"
Repository = "https://github.com/readevb/rea"
Issues = "https://github.com/readevb/rea/issues"

[project.scripts]
rea = "rea.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["rea*"]

[tool.setuptools.package-data]
"rea" = ["templates/**/*", "templates/**/.claude/**/*", "templates/**/.claude/agents/*", "templates/**/.github/**/*"]
